unpackaged/main/default/objects/ffct__MigrationRule__c/ffct__MigrationRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>Holds the rule to be applied on the Migration Set</description>
    <label>Migration Rule</label>
    <nameField>
        <label>Migration Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>