unpackaged/main/default/objects/ffct__MigrationRule__c/fields/ffct__ApplicableForPackages__c.field-meta.xml
<CustomField>
    <fullName>ffct__ApplicableForPackages__c</fullName>
    <description>Holds the list of package namespaces on which the rule is applicable.</description>
    <label>Applicable For Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>appirio_core</fullName>
            </value>
            <value>
                <fullName>c2g</fullName>
            </value>
            <value>
                <fullName>fferpcore</fullName>
            </value>
            <value>
                <fullName>ffgl</fullName>
            </value>
            <value>
                <fullName>ffirule</fullName>
            </value>
            <value>
                <fullName>ffr</fullName>
            </value>
            <value>
                <fullName>ffrr</fullName>
            </value>
            <value>
                <fullName>ffrr_exp</fullName>
            </value>
            <value>
                <fullName>ffumt</fullName>
            </value>
            <value>
                <fullName>ob1</fullName>
            </value>
            <value>
                <fullName>psa_report</fullName>
            </value>
            <value>
                <fullName>pse</fullName>
            </value>
            <value>
                <fullName>pse_resource</fullName>
            </value>
            <value>
                <fullName>VanaHCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>