unpackaged/main/default/objects/ffct__MigrationRule__c/fields/ffct__Description__c.field-meta.xml
<CustomField>
    <fullName>ffct__Description__c</fullName>
    <description>Holds the description of the rule.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>