unpackaged/main/default/objects/ffct__MigrationRule__c/fields/ffct__Type__c.field-meta.xml
<CustomField>
    <fullName>ffct__Type__c</fullName>
    <description>Holds the type of rule. Currently it supports 'Filter'.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
                <default>true</default>
                <label>Filter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>