unpackaged/main/default/objects/ffct__MigrationRule__c/listViews/ffct__All.listView-meta.xml
<ListView>
    <fullName>ffct__All</fullName>
    <columns>NAME</columns>
    <columns>ffct__FilterOperation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>